manifest/cem/pre/ingress/cem-gateway.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cem-gateway
  namespace: pre
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/client-body-buffer-size: 10m
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/server-snippet: |
      access_log /var/log/nginx/xxxxxxxxxx.access.log;
      error_log /var/log/nginx/xxxxxxxxxx.error.log;
      location = / {
          rewrite ^/(.*)$ https://xxxxxxxxxx/website/$1 permanent;
      }
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - xxxxxxxxxx
    secretName: cempro.cn-tls
  rules:
  - host: xxxxxxxxxx
    http:
      paths:
      - path: /icloud(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: cem-gateway
            port:
              number: 80
...
